<resources>
    <string name="app_name">Csabi\'s Portfolio</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>

    <string name="launch_spotify_streamer">This button will launch my Spotify Streamer app!</string>
    <string name="launch_scores_app">This button will launch my Scores app!</string>
    <string name="launch_library">This button will launch my Library app!</string>
    <string name="launch_build_it_bigger">This button will launch my Build It Bigger app!</string>
    <string name="launch_xyz_reader">This button will launch my XYZ Reader app!</string>
    <string name="launch_my_own_app">This button will launch my own capstone app!</string>
</resources>
