<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/my_nanodegree_apps"
        android:textSize="@dimen/text_size_activity_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/content_padding"
            android:paddingRight="@dimen/content_padding"
            android:theme="@style/PortfolioButtonTheme">

            <Button
                android:id="@+id/button_spotify_streamer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify_streamer" />

            <Button
                android:id="@+id/button_scores_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_app" />

            <Button
                android:id="@+id/button_library_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_app" />

            <Button
                android:id="@+id/button_build_it_bigger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger" />

            <Button
                android:id="@+id/button_xyz_reader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader" />

            <Button
                android:id="@+id/button_my_own_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone_my_own_app"
                android:theme="@style/SpecialPortfolioButtonTheme" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
